--- a/.env.test
+++ b/.env.test
@@ -6,8 +6,8 @@ ENVIRONMENT=local
 # Backend
 BACKEND_CORS_ORIGINS="http://localhost,http://localhost:5173,http://localhost:8000,https://localhost,https://localhost:5173"
 SECRET_KEY=123456789
-FIRST_SUPERUSER=admin@example.com
-FIRST_SUPERUSER_PASSWORD=password
+ADMIN_USERNAME=admin@example.com
+ADMIN_PASSWORD=password
 
 SCHEDULER_REDIS_URL=
 SCHEDULER_SQLITE_FILE=tasks.db
