--- a/.env.sample
+++ b/.env.sample
@@ -5,9 +5,10 @@ ENVIRONMENT=local
 
 # Backend
 BACKEND_CORS_ORIGINS="http://localhost,http://localhost:5173,http://localhost:8000,https://localhost,https://localhost:5173"
-SECRET_KEY=123456789
 ADMIN_USERNAME=admin@example.com
 ADMIN_PASSWORD=password
 
 SCHEDULER_REDIS_URL=
 SCHEDULER_SQLITE_FILE=tasks.db
+
+REDIS_STORAGE_CERTS_PATH=
